refactor: optimize dependency graph performances