@@ -32,7 +32,6 @@ import org.eclipse.edc.spi.system.ServiceExtensionContext;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -44,6 +43,10 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Optional.ofNullable;
+import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
+import static java.util.stream.Collectors.toSet;
 
 
 /**
@@ -77,44 +80,43 @@ public class DependencyGraph {
 
         // check if all injected fields are satisfied, collect missing ones and throw exception otherwise
         var unsatisfiedInjectionPoints = new ArrayList<InjectionPoint<ServiceExtension>>();
-        var injectionPoints = extensions.stream()
-                .flatMap(ext -> getInjectedFields(ext).stream()
-                        .peek(injectionPoint -> {
-                            if (!canResolve(dependencyMap, injectionPoint.getType())) {
-                                if (injectionPoint.isRequired()) {
-                                    unsatisfiedInjectionPoints.add(injectionPoint);
-                                }
-                            } else {
-                                // get() would return null, if the feature is already in the context's service list
-                                ofNullable(dependencyMap.get(injectionPoint.getType()))
-                                        .ifPresent(l -> l.stream()
-                                                .filter(d -> !Objects.equals(d, ext)) // remove dependencies onto oneself
-                                                .forEach(provider -> sort.addDependency(ext, provider)));
-                            }
-                        })
-                )
-                .collect(Collectors.toList());
+        var unsatisfiedRequirements = new ArrayList<String>();
 
-        //throw an exception if still unsatisfied links
+        var injectionPoints = extensions.stream()
+                .collect(toMap(identity(), ext -> {
+
+                    //check that all the @Required features are there
+                    getRequiredFeatures(ext.getClass()).forEach(feature -> {
+                        var dependencies = dependencyMap.get(feature);
+                        if (dependencies == null) {
+                            unsatisfiedRequirements.add(feature.getName());
+                        } else {
+                            dependencies.forEach(dependency -> sort.addDependency(ext, dependency));
+                        }
+                    });
+
+                    return injectionPointScanner.getInjectionPoints(ext)
+                            .peek(injectionPoint -> {
+                                if (!canResolve(dependencyMap, injectionPoint.getType())) {
+                                    if (injectionPoint.isRequired()) {
+                                        unsatisfiedInjectionPoints.add(injectionPoint);
+                                    }
+                                } else {
+                                    // get() would return null, if the feature is already in the context's service list
+                                    ofNullable(dependencyMap.get(injectionPoint.getType()))
+                                            .ifPresent(l -> l.stream()
+                                                    .filter(d -> !Objects.equals(d, ext)) // remove dependencies onto oneself
+                                                    .forEach(provider -> sort.addDependency(ext, provider)));
+                                }
+                            })
+                            .collect(toSet());
+                }));
+
         if (!unsatisfiedInjectionPoints.isEmpty()) {
             var string = "The following injected fields were not provided:\n";
             string += unsatisfiedInjectionPoints.stream().map(InjectionPoint::toString).collect(Collectors.joining("\n"));
             throw new EdcInjectionException(string);
         }
-
-        //check that all the @Required features are there
-        var unsatisfiedRequirements = new ArrayList<String>();
-        extensions.forEach(ext -> {
-            var features = getRequiredFeatures(ext.getClass());
-            features.forEach(feature -> {
-                var dependencies = dependencyMap.get(feature);
-                if (dependencies == null) {
-                    unsatisfiedRequirements.add(feature.getName());
-                } else {
-                    dependencies.forEach(dependency -> sort.addDependency(ext, dependency));
-                }
-            });
-        });
 
         if (!unsatisfiedRequirements.isEmpty()) {
             var string = String.format("The following @Require'd features were not provided: [%s]", String.join(", ", unsatisfiedRequirements));
@@ -123,11 +125,10 @@ public class DependencyGraph {
 
         sort.sort(extensions);
 
-        // todo: should the list of InjectionContainers be generated directly by the flatmap?
         // convert the sorted list of extensions into an equally sorted list of InjectionContainers
         return extensions.stream()
-                .map(se -> new InjectionContainer<>(se, injectionPoints.stream().filter(ip -> ip.getInstance() == se).collect(Collectors.toSet())))
-                .collect(Collectors.toList());
+                .map(key -> new InjectionContainer<>(key, injectionPoints.get(key)))
+                .toList();
     }
 
     private boolean canResolve(Map<Class<?>, List<ServiceExtension>> dependencyMap, Class<?> featureName) {
@@ -142,18 +143,17 @@ public class DependencyGraph {
 
     private Map<Class<?>, List<ServiceExtension>> createDependencyMap(List<ServiceExtension> extensions) {
         Map<Class<?>, List<ServiceExtension>> dependencyMap = new HashMap<>();
-        extensions.forEach(ext -> getDefaultProvidedFeatures(ext).forEach(feature -> dependencyMap.computeIfAbsent(feature, k -> new ArrayList<>()).add(ext)));
         extensions.forEach(ext -> getProvidedFeatures(ext).forEach(feature -> dependencyMap.computeIfAbsent(feature, k -> new ArrayList<>()).add(ext)));
         return dependencyMap;
     }
 
-    private Set<Class<?>> getRequiredFeatures(Class<?> clazz) {
+    private Stream<Class<?>> getRequiredFeatures(Class<?> clazz) {
         var requiresAnnotation = clazz.getAnnotation(Requires.class);
         if (requiresAnnotation != null) {
             var features = requiresAnnotation.value();
-            return Stream.of(features).collect(Collectors.toSet());
+            return Stream.of(features);
         }
-        return Collections.emptySet();
+        return Stream.empty();
     }
 
     /**
@@ -165,18 +165,12 @@ public class DependencyGraph {
         // check all @Provides
         var providesAnnotation = ext.getClass().getAnnotation(Provides.class);
         if (providesAnnotation != null) {
-            var featureStrings = Arrays.stream(providesAnnotation.value()).collect(Collectors.toSet());
-            allProvides.addAll(featureStrings);
+            allProvides.addAll(Arrays.asList(providesAnnotation.value()));
         }
-        // check all @Provider methods
-        allProvides.addAll(new ProviderMethodScanner(ext).nonDefaultProviders().stream().map(ProviderMethod::getReturnType).collect(Collectors.toSet()));
-        return allProvides;
-    }
 
-    private Set<Class<?>> getDefaultProvidedFeatures(ServiceExtension ext) {
-        return new ProviderMethodScanner(ext).defaultProviders().stream()
-                .map(ProviderMethod::getReturnType)
-                .collect(Collectors.toSet());
+        // check all @Provider methods
+        new ProviderMethodScanner(ext).allProviders().map(ProviderMethod::getReturnType).forEach(allProvides::add);
+        return allProvides;
     }
 
     /**
@@ -184,23 +178,10 @@ public class DependencyGraph {
      * explicit @Requires annotations are not necessary
      */
     private List<ServiceExtension> sortByType(List<ServiceExtension> loadedExtensions) {
-        var baseDependencies = loadedExtensions.stream().filter(e -> e.getClass().getAnnotation(BaseExtension.class) != null).collect(Collectors.toList());
-        if (baseDependencies.isEmpty()) {
-            throw new EdcException("No base dependencies were found on the classpath. Please add the \"core:common:connector-core\" module to your classpath!");
-        }
-
-        return loadedExtensions.stream().sorted(new ServiceExtensionComparator()).collect(Collectors.toList());
+        return loadedExtensions.stream().sorted(new SortByType()).collect(toList());
     }
 
-    /**
-     * Obtains all features a specific extension provides as strings
-     */
-    private Set<InjectionPoint<ServiceExtension>> getInjectedFields(ServiceExtension ext) {
-        // initialize with legacy list
-        return injectionPointScanner.getInjectionPoints(ext);
-    }
-
-    private static class ServiceExtensionComparator implements Comparator<ServiceExtension> {
+    private static class SortByType implements Comparator<ServiceExtension> {
         @Override
         public int compare(ServiceExtension o1, ServiceExtension o2) {
             return orderFor(o1.getClass()).compareTo(orderFor(o2.getClass()));
